<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/activity_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CardView"
        app:cardCornerRadius="@dimen/cardView_cornerRadius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/titleImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:src="@drawable/irvine_museum"/>

            <TextView
                android:id="@+id/activity_title_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/irvine_museum"
                style="@style/CardView_Title_Text"/>

            <TextView
                android:id="@+id/home_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/irvine_museum_info"
                style="@style/CardView_Text"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/activity_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CardView"
        app:cardCornerRadius="@dimen/cardView_cornerRadius"
        android:layout_below="@+id/activity_1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/activity_image_2"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:src="@drawable/tanaka_farms"/>

            <TextView
                android:id="@+id/activity_text_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tanaka_farms"
                style="@style/CardView_Title_Text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tanaka_farms_info"
                style="@style/CardView_Text"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CardView"
        app:cardCornerRadius="@dimen/cardView_cornerRadius"
        android:layout_below="@+id/activity_2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/activity_image_3"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:src="@drawable/great_park"/>

            <TextView
                android:id="@+id/activity_text_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/great_park"
                style="@style/CardView_Title_Text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/great_park_info"
                style="@style/CardView_Text"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>
</ScrollView>